Fixed scrollbar on mobile

--- a/html/src/components/homepage.module.css
+++ b/html/src/components/homepage.module.css
@@ -1,5 +1,5 @@
 .contentContainer {
-    
+    height: calc(100vh - 56px);
     color: #FFFFFF;
 }
 
